# evolo_common

evolo_accoustic_com/: package.xml  setup.cfg  setup.py
evolo_accoustic_com/evolo_accoustic_com/: succor_command_scheduler.py
evolo_accoustic_com/launch/: succor_command_scheduler.launch.py
evolo_accoustic_com/test/: test_copyright.py  test_flake8.py
evolo_captain_interface/: setup.py
evolo_captain_interface/evolo_captain_interface/: evolo_captain_interface.py  gps_relay.py
evolo_captain_interface/launch/: evolo_captain_odom_initializer_launch.py  evolo_captain_odom_launch.py
evolo_config/: package.xml  setup.cfg  setup.py
evolo_config/config/: ellipse_D_default.yaml  evolo_lidar_params.yaml  tcp_evolo.yaml  tcp_remote.yaml
evolo_config/launch/: lidar_launch.py  mqtt_to_ros_obstacle.launch  network_bridge_evolo_tcp.launch.py  network_bridge_remote_tcp.launch.py  sbg_launch.py  z1_pro_launch.py
evolo_gimbal_remote_control/: CMakeLists.txt  package.xml
evolo_gimbal_remote_control/include/evolo_gimbal_remote_control/: json_subscriber.h
evolo_gimbal_remote_control/launch/: detection_json_publisher.launch.py  gimbal_json_publisher.launch.py  gimbal_remote_control.launch.py  json_publishers.launch.py  mqtt_camcmd_listener.launch.py
evolo_gimbal_remote_control/scripts/: detection_json_publisher.py  gimbal_action_client.py  gimbal_json_publisher.py  gimbal_poi_backend.py
evolo_gimbal_remote_control/src/: json_subscriber.cpp  main.cpp
evolo_health_checker/: CMakeLists.txt  package.xml
evolo_health_checker/src/: evolo_health_checker.cpp
evolo_json_bridge/evolo_json_bridge/: evolo_json_bridge.py
evolo_mqtt_bridge/evolo_mqtt_bridge/: mqtt_bridge.py
evolo_node_red_interface/: package.xml  setup.cfg  setup.py
evolo_node_red_interface/evolo_node_red_interface/: evolo_to_node_red_translator.py
evolo_node_red_interface/launch/: node_red_interface_launch.py
evolo_serial_bridge/evolo_serial_bridge/: evolo_serial_bridge.py
sbg_to_odom/src/: sbg_nav_to_evolo_odom.cpp
sbg_to_odom_initializer/sbg_to_odom_initializer/: sbg_map_odom_initializer.py
