cmake_minimum_required(VERSION 3.8)
project(evolo_health_checker)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

#find_package(GTSAM REQUIRED)
find_package(PkgConfig)
#pkg_search_module(Eigen3 REQUIRED eigen3)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};/usr/share/cmake/geographiclib")
#find_package(GeographicLib REQUIRED)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sbg_driver REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(evolo_msgs REQUIRED)
find_package(smarc_msgs REQUIRED)

add_executable(evolo_health_checker src/evolo_health_checker.cpp)
# target_include_directories(evolo_health_checker PUBLIC ./include/${GeographicLib_INCLUDE_DIRS})
target_link_libraries(evolo_health_checker
  rclcpp::rclcpp
  ${nav_msgs_TARGETS}
  ${geometry_msgs_TARGETS}
  ${std_msgs_TARGETS}
  ${sbg_driver_TARGETS}
  ${tf2_TARGETS}
  ${tf2_ros_TARGETS}
  ${smarc_msgs_TARGETS}
  ${evolo_msgs_TARGETS}
  )

install(TARGETS
  evolo_health_checker
  DESTINATION lib/${PROJECT_NAME}
  )


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
